--- a/project.html
+++ b/project.html
@@ -32,12 +32,12 @@
 </section>
 
 <section class="project-image">
-  <img src="assets/img1.jpg" alt="">
+  <img src="assets/img1.jpeg" alt="">
 </section>
 
 <section class="project-gallery">
-  <img src="assets/img2.jpg" alt="">
-  <img src="assets/img3.jpg" alt="">
+  <img src="assets/img2.jpeg" alt="">
+  <img src="assets/img3.jpeg" alt="">
 </section>
 
 <section class="project-footer">
