--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 <section class="featured">
   <div class="grid">
-    <img src="assets/img1.jpg" loading="lazy" alt="">
+    <img src="assets/img1.jpeg" loading="lazy" alt="">
     <div class="stack">
-      <img src="assets/img2.jpg" loading="lazy" alt="">
-      <img src="assets/img3.jpg" loading="lazy" alt="">
+      <img src="assets/img2.jpeg" loading="lazy" alt="">
+      <img src="assets/img3.jpeg" loading="lazy" alt="">
     </div>
   </div>
 </section>
@@ -52,22 +52,22 @@
 <section class="horizontal">
   <div class="horizontal-inner">
     <div class="panel">
-      <img src="assets/img1.jpg" alt="">
-      <p class="caption">Midday Silence · 2024</p>
+      <img src="assets/img1.jpeg" alt="">
+      <p class="caption">Zubeen Garg</p>
     </div>
     <div class="panel">
-      <img src="assets/img2.jpg" alt="">
-      <p class="caption">Concrete & Light</p>
+      <img src="assets/img2.jpeg" alt="">
+      <p class="caption">Zubeen Garg</p>
     </div>
     <div class="panel">
-      <img src="assets/img3.jpg" alt="">
-      <p class="caption">Still Presence</p>
+      <img src="assets/img3.jpeg" alt="">
+      <p class="caption">Zubeen Garg</p>
     </div>
   </div>
 </section>
 
 <section class="about">
-  <img src="assets/portrait.jpg" loading="lazy" alt="">
+  <img src="assets/portrait.jpeg" loading="lazy" alt="">
   <div class="about-text">
     <p>
       I photograph moments that sit quietly between intention and accident.
@@ -78,7 +78,7 @@
 
 <section class="projects">
   <a class="project" href="project.html">
-    <img src="assets/img1.jpg" alt="">
+    <img src="assets/img1.jpeg" alt="">
     <div>
       <h3>Shadows of Noon</h3>
       <span>2024</span>
